changed a lot of stuff

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 URI=mongodb+srv://prayas:8n6DU2upL6Sm8ewU@introml.k7gtz.mongodb.net/IntroML?retryWrites=true&w=majority
+MDB_URI=mongodb+srv://prayas:8n6DU2upL6Sm8ewU@introml.k7gtz.mongodb.net/IntroML?retryWrites=true&w=majority
 PORT=6543
